[package]
name = "selendra-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
sc-client-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-inherents = { workspace = true }
sp-api = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-babe = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-chain-spec = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sc-consensus-epochs = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-rpc-spec-v2 = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-statement-store = { workspace = true }
substrate-state-trie-migration-rpc = { workspace = true }

pallet-starknet = { workspace = true, features = ["genesis-loader"] }
pallet-starknet-runtime-api = { workspace = true }
mc-db = { workspace = true }
mc-genesis-data-provider = { workspace = true }
mc-storage = { workspace = true }
mc-rpc = { workspace = true }

selendra-primitives = { workspace = true }
selendra-runtime = { workspace = true, features = ["std"] }

