[package]
name = "aggregator"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
license = "Apache 2.0"


[dependencies]
async-trait = "0.1"
futures = "0.3"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
tokio = { version = "1.17", features = [ "sync", "macros", "time", "rt-multi-thread" ] }
log = "0.4"

selendra-bft-rmc = { package = "aleph-bft-rmc", version = "0.6.1" }
selendra-bft-types = {  package = "aleph-bft-types",version = "0.8.1" }

