[package]
name = "aggregator"
version = "0.2.1"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true , features = [ "sync", "macros", "time", "rt-multi-thread" ] }
log = { workspace = true }

selendra-bft-rmc = { workspace = true }
selendra-bft-types = { workspace = true }


