[package]
name = "network-clique"
version = "0.1.1"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["std", "derive"] }

async-trait = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
hash-db = { workspace = true }
ip_network = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "time", "rt-multi-thread", "io-util", "net"] }

[dev-dependencies]
selendra-bft-types = { workspace = true }
selendra-bft-mock = { workspace = true }
