[package]
name = "finality-selendra"
version = "0.1.1"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }

tokio = { workspace = true, features = [ "sync", "macros", "time", "rt-multi-thread" ] }
async-trait = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
hash-db = { workspace = true }
ip_network = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tiny-bip39 = { workspace = true }

# fixed version to 'freeze' some types used in abft, mainly `SignatureSet` used in justification and signature aggregation
selendra-bft-crypto = { workspace = true }
selendra-primitives = { workspace = true }
network-clique = { workspace = true }
current-selendra-aggregator = { workspace = true }
current-selendra-bft = { workspace = true }
current-selendra-bft-rmc = { workspace = true }
legacy-selendra-bft = { workspace = true }
legacy-selendra-bft-rmc = { workspace = true }
legacy-selendra-aggregator = { workspace = true }

sp-keystore = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-trie = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sc-utils = {  workspace = true }
sp-io = { workspace = true }
sc-client-api = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
sc-telemetry = { workspace = true }
sc-service = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

[dev-dependencies]
substrate-test-runtime-client = { workspace = true }
substrate-test-runtime = { workspace = true }
substrate-test-client = { workspace = true }
sc-block-builder = { workspace = true }
selendra-runtime = { workspace = true }

[features]
only_legacy = []
