[package]
name = "chain-bootstrapper"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
libp2p = { workspace = true }
hex = { workspace = true }

sc-cli = { workspace = true, default-features = false }
sc-chain-spec = { workspace = true }
sc-service = { workspace = true, default-features = false }
sc-client-db = { workspace = true, default-features = false }
sc-keystore = { workspace = true }

sp-application-crypto = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
fp-evm = { workspace = true }

pallet-staking = { workspace = true }

selendra-primitives = { workspace = true }
selendra-runtime = { workspace = true }

[features]
default = []
short_session = [
    "selendra-runtime/short_session",
    # "selendra_primitives/short_session",
]
# enable_treasury_proposals = [
#     "selendra-runtime/enable_treasury_proposals"
# ]
# try-runtime = [
#     "selendra-runtime/try-runtime",
# ]