[package]
name = "client-runtime-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-version = { workspace = true }
sp-block-builder = { workspace = true }
sp-offchain = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-session = { workspace = true }
sp-inherents = { workspace = true }

fp-rpc = { workspace = true }

frame-support = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-aleph-runtime-api = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }

selendra-primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "selendra-primitives/std",
    "pallet-aleph-runtime-api/std",
    "pallet-ethereum/std",
    "pallet-evm/std",
    "fp-rpc/std",
]
short_session = []
runtime-benchmarks = []
try-runtime = []
