[package]
name = "network-clique"
version = "0.6.0"
license = "Apache 2.0"
authors = ["Cardinal", "Aleph Zero Foundation"]
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
parity-scale-codec = { workspace = true, features = ["std", "derive"] }
derive_more = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
hash-db = { workspace = true }
ip_network = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
prometheus-endpoint = { workspace = true }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
    "io-util",
    "net",
] }

rate-limiter = { workspace = true }

[dev-dependencies]
aleph-bft-types = { workspace = true }
aleph-bft-mock = { workspace = true }