[package]
name = "rate-limiter"
version = "0.1.0"
authors = ["Cardinal", "Aleph Zero Foundation"]
edition.workspace = true

[dependencies]
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "macros", "rt-multi-thread"] }

[dev-dependencies]
parking_lot = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
