[package]
name = "rate-limiter"
version = "0.1.0"
edition.workspace = true
license = "Apache 2.0"
authors = ["Cardinal", "Aleph Zero Foundation"]
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/aleph-node"

[dependencies]
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "macros", "rt-multi-thread"] }

[dev-dependencies]
parking_lot = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
