[package]
name = "selendra-client"
version = "1.0.0"
edition = "2021"
authors = ["Selendra"]
description = "This crate provides a Rust application interface for submitting transactions to `selendra-node` chain."

[dependencies]
async-trait = "0.1.58"
anyhow = "1.0"
codec = { package = 'parity-scale-codec', version = "3.0.0", features = ['derive'] }
hex = { version = "0.4.3", features = ["alloc"] }
log = "0.4"
thiserror = "1.0"
serde_json = { version = "1.0.94" }
contract-transcode = "3.2.0"
ink_metadata = { version = "4.3.0" }
subxt = { version = "0.30.1", features = ["substrate-compat"] }
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }

pallet-contracts = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }

primitives = { package = "selendra-primitives", path = "../../primitives" }

[dev-dependencies]
tokio = "1.39"